--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,7 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
-  <script>
+<script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
@@ -55,5 +55,9 @@
       });
     });
   </script>
+<noscript>
+  <strong>We're sorry but TodoListo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<flutter-app-element></flutter-app-element>
 </body>
 </html>
