Changes: Fixing SCrollable bug

--- a/web/index.html
+++ b/web/index.html
@@ -31,11 +31,12 @@
 
   <title>todo</title>
   <link rel="manifest" href="manifest.json">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = null;
+    var serviceWorkerVersion = {{flutter_service_worker_version}};
+      {{flutter_js}}
+      {{flutter_build_config}}
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
@@ -50,10 +51,11 @@
 <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        },
+    _flutter.loader.load({
+  entrypointUrl: "main.dart.js",
+  serviceWorker: {
+    serviceWorkerVersion: "{{service_worker_version}}",
+  },
         onEntrypointLoaded: function(engineInitializer) {
           engineInitializer.initializeEngine().then(function(appRunner) {
             appRunner.runApp();
