--- a/web/index.html
+++ b/web/index.html
@@ -22,10 +22,40 @@
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="todo">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="TodoListo">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover">
+  
+  <!-- PWA optimizations for iOS -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#6750A4">
+  
+  <!-- Touch and gesture support -->
+  <meta name="touch-action" content="manipulation">
+  <style>
+    /* iOS Safari optimizations */
+    html, body {
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+      touch-action: manipulation;
+      overscroll-behavior: none;
+    }
+    
+    /* Prevent zoom on form focus */
+    input, textarea, select {
+      font-size: 16px !important;
+    }
+    
+    /* Smooth scrolling for iOS */
+    * {
+      -webkit-overflow-scrolling: touch;
+    }
+  </style>
 
 
 
@@ -37,7 +67,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = {{flutter_service_worker_version}};
+    var serviceWorkerVersion = "{{flutter_service_worker_version}}";
       {{flutter_js}}
       {{flutter_build_config}}
   </script>
