Add smart learning input dialog

--- a/web/index.html
+++ b/web/index.html
@@ -67,11 +67,10 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "{{flutter_service_worker_version}}";
+    var serviceWorkerVersion = {{flutter_service_worker_version}};
       {{flutter_js}}
       {{flutter_build_config}}
   </script>
-  <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
   <style>.keyboard-open .your-popup-class {
   position: fixed;
@@ -83,7 +82,6 @@
 <body>
 <script>
     window.addEventListener('load', function(ev) {
-      // Download main.dart.js
     _flutter.loader.load({
   entrypointUrl: "main.dart.js",
   serviceWorker: {
